[tool.poetry]
name = "linguisage-ai"
version = "0.1.0"
description = ""
authors = ["Alexandr Gurov <MyNameIIIypuk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
g4f = "^0.2.6.2"
nest-asyncio = "^1.6.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
